deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: chall
  name: chall
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chall
  strategy: {}
  template:
    metadata:
  
      labels:
        app: chall
    spec:
      containers:
      - image: challenge-app:2.0
        name: challenge-app
